--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-family: 'Inter', sans-serif; 
 }
 
 @layer utilities {
@@ -36,3 +37,7 @@ body {
     text-wrap: balance;
   }
 }
+
+
+
+
